# MultiGeiger-V2

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.feathers3_d  sdkconfig.defaults.heltec_v2  serial_log.py
main/: CMakeLists.txt  applog.c  applog.h  bme280.c  bme280.h  bme688.c  bme688.h  bmp390.c  bmp390.h  config.c  config.h  display.c  display.h  env_sensor.c  env_sensor.h  hal.h  http_server.c  http_server.h  log_ftp.c  log_ftp.h  main.c  ntp.c  ntp.h  sht45.c  sht45.h  speaker.c  speaker.h  transmission.c  transmission.h  tube.c  tube.h  version.h
